tests/parse/error_parallel_by4.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void i_parallel_by4() {
  parallel {p, q} by [128] {
    int b = 100;
  }
}

// CHECK: error: parallel variables are more than their bounds (2 vs. 1).
// CHECK-NOT: error:
